alignment fixed

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ body {
     justify-content: center;
     padding-top: 40vh;
     text-align: center;
+    align-self: center;
 }
 
 h1 {
